# rusty-finance

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: frontend.rs  main.rs
server/: Cargo.toml
server/migrations/2022-10-16-105005_create_transactions/: up.sql
server/src/: api.rs  csv_model.rs  main.rs
server/src/database/: mod.rs  model.rs  schema.rs
