[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
csv = "1.1"
chrono =  "0.4.22"
encoding_rs_io = "0.1.7"
encoding_rs= "0.8.31"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
pretty_env_logger = "0.4.0"
anyhow = "1.0.66"
phf = { version = "0.11.1", features = ["macros"] }
